[metadata]
name = imgapi
version = 0.1
author = Sergio A. Martinez
author_email = contact@img-api.com
description = A sample to connect to IMGAPI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sergioamr/img-api-python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = imgapi
packages = find:
python_requires = >=3.6

[options.packages.find]
where = imgapi